--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,38 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>CoverGEN - AI Resume & Cover Letter Generator</title>
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="CoverGEN helps you instantly generate professional resumes and cover letters using AI. Fast, simple, and personalized." />
+  <meta name="keywords" content="AI cover letter, resume builder, CoverGEN, job application, resume generator" />
+  <meta name="author" content="CoverGEN Team" />
+
+  <!-- Social Sharing -->
+  <meta property="og:title" content="CoverGEN - AI Resume & Cover Letter Generator" />
+  <meta property="og:description" content="Instantly generate professional resumes and cover letters with AI. Try it free!" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://covergen.vercel.app" />
+  <meta property="og:image" content="https://covergen.vercel.app/og-image.png" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico" />
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+
+  <!-- Base Styling -->
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background-color: #f5f7fa;
+      color: #222;
+    }
+  </style>
 </head>
 <body>
   <div id="root"></div>
